# SlideWindowOptimizationBased2DSLAM

./: CMakeLists.txt  README.md  package.xml
launch/: slam_2d.launch
src/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h  rosNodeTest.cpp  utility.cpp  utility.h  visualization.cpp  visualization.h
src/factor/: landmark_factor.h  marginalization_factor.cpp  marginalization_factor.h  odom_factor.h  odom_integration.h  pose2d_local_parameterization.h
